Migrate from groovy to kotlin dsl

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "AdMan"
-include ':app'
-include ':adman'
+include(":app")
+include(":adman")
